# cmake_study

demo1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  demo1.sln  demo1.vcxproj  demo1.vcxproj.filters  main.cpp
demo2/: CMakeLists.txt
demo3/: CMakeLists.txt
demo3/mylib/: CMakeLists.txt  cmake_install.cmake
demo4/: CMakeLists.txt
demo4/mylib/: CMakeLists.txt
demo5/src/: CMakeLists.txt
